--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
     margin-top: 10px;
     color: darkmagenta;
 }
+h3{
+    text-align: center;
+}
 table {
     width: 30%;
     margin: auto;
